# GAFA_ArtInnov.RC26_ALL

./: README.md
Computer Vision Group-main/: README.md  ros2-vision-complete-guide.md
Computer Vision Group-main/ros2_vision_project/docker/: COMPLETE_DOCKER_GUIDE.md  Dockerfile.ros2  Dockerfile.ros2.gpu  Dockerfile.ros2.jetson  README_ROS2_DOCKER.md  docker-compose.ros2.yml  env.example  requirements.txt  run_docker_ros2.sh  test_docker_env.py
Computer Vision Group-main/ros2_vision_project/ros2_ws/: ROS2_YOLOV8_D435i_Integration_Guide.md  test_detector.py  启的.md
Computer Vision Group-main/ros2_vision_project/ros2_ws/src/vision_detector/: CMakeLists.txt  package.xml  setup.cfg  setup.py
Computer Vision Group-main/ros2_vision_project/ros2_ws/src/vision_detector/launch/: detector.launch.py  detector_rviz.launch.py
Computer Vision Group-main/ros2_vision_project/ros2_ws/src/vision_detector/rviz/: detector_view.rviz
Computer Vision Group-main/ros2_vision_project/ros2_ws/src/vision_detector/vision_detector/: detector_node.py  utils.py  yolov8_detector.py
Computer Vision Group-main/ros2_vision_project/ros2_ws/src/vision_detector/vision_detector/config/: detector_params.yaml
Computer Vision Group-main/ros2_vision_project/ros2_ws/src/vision_detector/vision_detector/rviz/: detector_view.rviz
Computer Vision Group-main/ros2_vision_project/ros2_ws/src/vision_msgs_custom/: CMakeLists.txt  package.xml
Computer Vision Group-main/ros2_vision_project/ros2_ws/src/vision_msgs_custom/msg/: Detection2DExtended.msg  ObjectDistance.msg
Computer Vision Group-main/ros2_vision_project/scripts/: build_and_deploy.sh  sync_to_jetson.sh
Computer Vision Group-main/训练代码v1/: loss_visualization.py  train_code.py  ~$训练代码说明.docx  训练代码说明.docx
